Database driven CFPS list

--- a/.htaccess
+++ b/.htaccess
@@ -10,5 +10,10 @@ RewriteCond %{DOCUMENT_ROOT}/$1.html -f
 RewriteCond %{DOCUMENT_ROOT}/$1 !-d
 RewriteRule ^(.*)$ /$1.html [L]
 
+# Map foo => foo.html
+RewriteCond %{DOCUMENT_ROOT}/$1.php -f
+RewriteCond %{DOCUMENT_ROOT}/$1 !-d
+RewriteRule ^(.*)$ /$1.php [L]
+
 # Use 301 redirects for better SEO and caching, but don't cache forever!
 Header always set Cache-Control "max-age=3600" env=limitcache
